--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,13 +8,16 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - projects.qmd
 
 format:
   html:
-    theme: cosmo
+    theme: 
+      light: lux
+      dark: slate
     css: styles.css
     toc: true
+    page-layout: full
 
 
 
